src/scss/header.scss
@font-face {
  font-family: 'Segoe UI';
  src: url('../assets/fonts/Segoe UI.ttf');
}

@font-face {
  font-family: 'MDL2';
  src: url('../assets/fonts/SegMDL2.ttf');
}

*{
  box-sizing: border-box;
}

html,
body{
  margin: 0;
  padding: 0;
  font-family: 'Segoe UI';
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
a{
  padding: 0;
  margin: 0;
}

.container{
  height: inherit;
  max-width: 1903px;
  margin: 0 auto;
}

.header{
  min-width: 360px;
  height: 54px;
  max-height: 54px;
  width: 90%;
  margin: 0 auto;
  &_container{
    margin: 0 5px;
    max-width: 1600px;
    height: inherit;

    display: flex;
  }
}

a{
  height: inherit;
  width: inherit;
  outline: none;
  color: #000 ;
  &:focus{
    border: 1px dashed #000;
  } 
}

.default-link{
  text-decoration: none;
}

.logo{
  display: flex;
  align-items: center;
  &_image{
    padding: 15px 6px 15px 10px;
    &_img{
      height: 23px;
    }
  }
  &_divider{
    width: 2px;
    height: 22px;
    background-color: #000;
    margin-left: 20px;
    margin-right: 28px;
  }
  &_title{
    padding: 5px;
    span{
      font-size: 18px;
      font-weight: 600;
    }
    &:hover{
      span{
        border-bottom: 2px solid #000;
      }
    }
  }

}

.dropdown-links{
  flex-grow: 1;
  margin-left: 8px;
  &_nav{
    display: flex;
  }
}

.header-nav{
  &_button{
    border: 1px solid transparent;
    background-color: transparent;
    float: left;
    padding: 18px 16px 16px 16px;
    font-size: 13px;
    font-family: 'Segoe UI';
    &:hover{
      cursor: pointer;
      span{
        border-bottom: 2px solid #000;
      }
    }
    &:focus{
      outline: none;
      border: 1px dashed #000;
    }
    &.dropdown{
      padding: 18px 22px 16px 16px;
      position: relative;

      $line-width: 5px;
      $right-offset: 12px;

      &::after{
        position: absolute;
        content: "";
        top: 50%;
        right: $right-offset;
        transform: rotate(50deg);
        width: 1px;
        height: $line-width;
        background-color: #000;
      }
      &::before{
        position: absolute;
        content: "";
        top: 50%;
        right: $right-offset + $line-width / 2 + 1;
        transform: rotate(-50deg);
        width: 1px;
        height: $line-width;
        background-color: #000;
      }
    }
    &_login{
      padding: 4px;
      display: flex;
      align-items: center;
      span{
        border-bottom: 2px solid transparent;
      }
    }
  }
  &_user-icon{
    margin-right: 10px;
    width: 32px;
    height: 32px;
    margin: 8px;
    margin-right: 4px;
    margin-left: 10px;
    float: right;

    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' stroke='%23707070'%3E%3Cg class='mectrl_stroke' stroke-width='1.9' fill='none'%3E%3Ccircle cx='32' cy='32' r='30.25'/%3E%3Cg transform='matrix(1.1 0 0 1.1 8.8 5.61)'%3E%3Ccircle class='mectrl_stroke' cx='20' cy='16' r='7'/%3E%3Cpath class='mectrl_stroke' d='M30 35h10m-5-5v10M30.833 32.09A11 11 0 009 34'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
  }
}

.icon{
  &-search{
    &::after {
      font-family: "MDL2";
      content: "";
      -ms-high-contrast-adjust: none;
      border: none;
      display: inline-block;
      font-size: 16px;
      margin-left: 2px;
      position: relative;
      text-indent: 0;
      vertical-align: sub;
    }
  }
  &-cart{
    &::after {
      font-family: "MDL2";
      content: "";
      -ms-high-contrast-adjust: none;
      border: none;
      display: inline-block;
      font-size: 16px;
      margin-left: 2px;
      position: relative;
      text-indent: 0;
      vertical-align: sub;
    }
  }
  &-menu{
    &::after {
      font-family: "MDL2";
      content: "";
      -ms-high-contrast-adjust: none;
      border: none;
      display: inline-block;
      font-size: 16px;
      margin-left: 2px;
      position: relative;
      text-indent: 0;
      vertical-align: sub;
    }
  }
}

.group{
  display: flex;
}

#more-btn{
  display: none;
}

#menu-btn{
  display: none;
}

#header-logo-mobile{
  display: none;
}

.subheader{
  display: none;
  .subheader-btn{
    font-family: 'Segoe UI';
    background-color: transparent;
    border: 0;
    font-weight: 400;
    height: 100%;
    margin: 0 1px;
    padding: 0 15px;
    text-align: left;
    font-size: 14px;
    font-weight: 700;
    padding-left: 7px;
    position: relative;

    &.dropdown{
      padding-right: 25px;
      position: relative;

      $line-width: 8px;
      $right-offset: 5px;

      &::after{
        position: absolute;
        content: "";
        top: 40%;
        right: $right-offset;
        transform: rotate(45deg);
        width: 1px;
        height: $line-width;
        background-color: #000;
      }
      &::before{
        position: absolute;
        content: "";
        top: 40%;
        right: $right-offset + $line-width / 2 + 1;
        transform: rotate(-45deg);
        width: 1px;
        height: $line-width;
        background-color: #000;
      }
    }

  }
}

